compiler/acton/test/typeerrors/ex2.act
def f(x,y):
    return x+y

a = f(3,4,5)
